data/all_generated_tests/raw_wast_tests/call_indirect_EdgeCaseFailuresinbr_table_4669.wast
;; 8. **Test Description**: Utilize a `call_indirect` instruction where the operand stack is empty, expecting an operand underflow trap.    - **Constraint Checked**: Validates correct handling of operand underflows.    - **Relation to `br_table` Edge Case**: Ensures stack underflow scenarios are managed, akin to out-of-bound index handling in `br_table`.

(assert_invalid
  (module
    (type (func (param i32)))
    (table 1 funcref)
    (func $operand-underflow
      (call_indirect (type 0) (i32.const 0))
    )
  )
  "operand stack underflow"
)